Out of time, fix overflow hidden in mobile, sorry ;)

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -12,7 +12,9 @@
 }
 
 body {
-  overflow: hidden;
+  @include for-tablet-portrait-up {
+    overflow: hidden;
+  }
 }
 
 .display-center {
